; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_tree.c_git_treebuilder_remove.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_tree.c_git_treebuilder_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [47 x i8] c"failed to remove entry: file isn't in the tree\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_treebuilder_remove(%struct.TYPE_4__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32* @treebuilder_get(%struct.TYPE_4__* %7, i8* %8)
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @tree_error(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i8* %13)
  store i32 %14, i32* %3, align 4
  br label %23

15:                                               ; preds = %2
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @git_strmap_delete(i32 %18, i8* %19)
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @git_tree_entry_free(i32* %21)
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %15, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32* @treebuilder_get(%struct.TYPE_4__*, i8*) #1

declare dso_local i32 @tree_error(i8*, i8*) #1

declare dso_local i32 @git_strmap_delete(i32, i8*) #1

declare dso_local i32 @git_tree_entry_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
